feat(settings): Limit presets to 6 and show duration in minutes only
- Add MaxPresets constant (6) and pass through state
- Add canAddPreset computed property to hide add button at limit
- Add formatShortTimeWithUnits for minutes-only preset display
- Rename formatTime to formatTimeWithDots for clarity
- Update preset description to show max limit via parameter

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -79,7 +79,7 @@
 
     <!-- Settings: Presets -->
     <string name="settings_presets_title">Быстрые пресеты</string>
-    <string name="settings_presets_description">Кнопки для быстрой установки длительности таймера</string>
+    <string name="settings_presets_description">Кнопки для быстрой установки длительности в минутах (макс. %d)</string>
     <string name="settings_add_preset">Добавить пресет</string>
     <string name="settings_add_preset_title">Добавить пресет</string>
     <string name="settings_add_preset_description">Введите длительность в минутах</string>
