feat(timer): Add extend button to active timer screen
- Add onExtendClick to ActiveTimerComponent interface
- Add extendDuration to ActiveTimerState for conditional button visibility
- Update ExtendTimerUseCase to read duration from settings internally
- Reduce spacing between timer display and buttons
- Add error handling to TimerNotificationService and AudioFadeService
- Add button_extend string resource (EN/RU)

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -22,6 +22,7 @@
     <!-- Buttons -->
     <string name="button_start">Старт</string>
     <string name="button_stop">Стоп</string>
+    <string name="button_extend">Продлить</string>
     <string name="button_reset">Сброс</string>
 
     <!-- Dialogs -->
