--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <!-- Buttons -->
     <string name="button_start">Start</string>
     <string name="button_stop">Stop</string>
+    <string name="button_extend">Extend</string>
     <string name="button_reset">Reset</string>
 
     <!-- Dialogs -->
